--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.hcxprotocol:hcx-integrator-sdk:1.0.0'
 	implementation 'net.sf.dozer:dozer:5.5.1'
+	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
+	implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-crypto:5.7.5'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	implementation 'com.google.code.gson:gson'
 	annotationProcessor 'org.projectlombok:lombok'
