--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 #spring.profiles.active=dev
 
 #Jwt secret
-app.secret=HCX
+app.secret=HCX_PAYOR
 
 #DB configurations
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=providers
-spring.data.mongodb.username=bavishya
-spring.data.mongodb.password=bavi1999
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=payor
+#spring.data.mongodb.username=bavishya
+#spring.data.mongodb.password=bavi1999
+#spring.data.mongodb.authentication-database=admin
 
 #Rabbitmq Configurations
-queue.req.name=hcx_request
-queue.exchange.name=hcx_exchange
-queue.reqrouting.key=hcxreq_routing_key
-queue.res.name=hcx_response
-queue.resrouting.key=hcxres_routing_key
+queue.req.name=hcx_payor_request
+queue.reqrouting.key=hcx_payor_req_routing_key
+queue.exchange.name=hcx_payor_exchange
+queue.res.name=hcx_payor_response
+queue.resrouting.key=hcx_payor_res_routing_key
 
 #HCX Congiguations
 hcx.protocolBasePath=http://staging-hcx.swasth.app/api/v0.7
@@ -26,7 +26,7 @@ hcx.recipientCode=1-434d79f6-aad8-48bc-b408-980a4dbd90e2
 hcx.username=vitrayahcxprovider1@vitrayatech.com
 hcx.password=qbmif99Ka4bvBPz
 hcx.igUrl=https://ig.hcxprotocol.io/v0.7
-logging.file.name=hcx.log
+logging.file.name=hcx_payor.log
 
 server.port = 9080
 
