--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,25 +1,34 @@
-app.secret=HCX
+
+#Jwt secret
+app.secret=HCX_PAYOR
 
 #DB configurations
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=providers
-spring.data.mongodb.username=bavishya
-spring.data.mongodb.password=bavi1999
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri="mongodb://hcxPayor:hcxPayor@vitraya@hcxpayor_mongodb.devcluster.com:27017/hcx_payor?tls=true&tlsCAFile=classpath:keys/CA.pem&tls&tlsCertificateKeyFile=classpath:keys/mclient.pem
+
 
 #Rabbitmq Configurations
-queue.name = hcxRequests_queue
-queue.exchange = hcxRequests_exchange
-queue.routingKey = hcxRequests_routingKey
+queue.req.name=hcx_payor_request
+queue.reqrouting.key=hcx_payor_req_routing_key
+queue.exchange.name=hcx_payor_exchange
+queue.res.name=hcx_payor_response
+queue.resrouting.key=hcx_payor_res_routing_key
+spring.rabbitmq.host=172.31.34.72
+spring.rabbitmq.virtualhost=/
+spring.rabbitmq.port=4573
+spring.rabbitmq.username=hcx_payor_worker
+spring.rabbitmq.password=payorworker@vitraya
 
 #HCX Congiguations
 hcx.protocolBasePath=http://staging-hcx.swasth.app/api/v0.7
 hcx.authBasePath=http://a9dd63de91ee94d59847a1225da8b111-273954130.ap-south-1.elb.amazonaws.com:8080/auth/realms/swasth-health-claim-exchange/protocol/openid-connect/token
-hcx.participantCode=1-bdaf4872-d41f-4d9e-9d23-fbe73ca984f8
-hcx.recipientCode=1-434d79f6-aad8-48bc-b408-980a4dbd90e2
-hcx.username=vitrayahcxprovider1@vitrayatech.com
-hcx.password=qbmif99Ka4bvBPz
+hcx.participantCode=1-434d79f6-aad8-48bc-b408-980a4dbd90e2
+hcx.recipientCode=1-bdaf4872-d41f-4d9e-9d23-fbe73ca984f8
+hcx.username=vitrayahcxpayor1@vitrayatech.com
+hcx.password=BkYJHwm64EEn8B8
 hcx.igUrl=https://ig.hcxprotocol.io/v0.7
-logging.file.name=devhcx.log
+logging.file.name=hcx_payor.log
+
 server.port = 9090
+
+
+
