--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,5 @@
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
-#Jwt secret
-app.secret=HCX_PAYOR
-
-#DB configurations
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=payor
-#spring.data.mongodb.username=bavishya
-#spring.data.mongodb.password=bavi1999
-#spring.data.mongodb.authentication-database=admin
-
-#Rabbitmq Configurations
-queue.req.name=hcx_payor_request
-queue.reqrouting.key=hcx_payor_req_routing_key
-queue.exchange.name=hcx_payor_exchange
-queue.res.name=hcx_payor_response
-queue.resrouting.key=hcx_payor_res_routing_key
-
-#HCX Congiguations
-hcx.protocolBasePath=http://staging-hcx.swasth.app/api/v0.7
-hcx.authBasePath=http://a9dd63de91ee94d59847a1225da8b111-273954130.ap-south-1.elb.amazonaws.com:8080/auth/realms/swasth-health-claim-exchange/protocol/openid-connect/token
-hcx.participantCode=1-bdaf4872-d41f-4d9e-9d23-fbe73ca984f8
-hcx.recipientCode=1-434d79f6-aad8-48bc-b408-980a4dbd90e2
-hcx.username=vitrayahcxprovider1@vitrayatech.com
-hcx.password=qbmif99Ka4bvBPz
-hcx.igUrl=https://ig.hcxprotocol.io/v0.7
-logging.file.name=hcx_payor.log
-
-server.port = 9080
 
 
 
