--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 app.secret=HCX_PAYOR
 
 #DB configurations
-spring.data.mongodb.uri="mongodb://hcxPayor:hcxPayor@vitraya@hcxpayor_mongodb.devcluster.com:27017/hcx_payor?tls=true&tlsCAFile=classpath:keys/CA.pem&tls&tlsCertificateKeyFile=classpath:keys/mclient.pem
+spring.data.mongodb.uri=mongodb://hcxPayor:hcxPayor%40vitraya@hcxpayor_mongodb.devcluster.com:27017/hcx_payor?authSource=admin
 
 
 #Rabbitmq Configurations
@@ -12,9 +12,9 @@ queue.reqrouting.key=hcx_payor_req_routing_key
 queue.exchange.name=hcx_payor_exchange
 queue.res.name=hcx_payor_response
 queue.resrouting.key=hcx_payor_res_routing_key
-spring.rabbitmq.host=172.31.34.72
+spring.rabbitmq.host=13.233.114.68
 spring.rabbitmq.virtualhost=/
-spring.rabbitmq.port=4573
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=hcx_payor_worker
 spring.rabbitmq.password=payorworker@vitraya
 
@@ -28,7 +28,7 @@ hcx.password=BkYJHwm64EEn8B8
 hcx.igUrl=https://ig.hcxprotocol.io/v0.7
 logging.file.name=hcx_payor.log
 
-server.port = 9090
+server.port = 9091
 
 
 
