--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,14 @@ dependencies {
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 }
 
+sourceSets {
+	main {
+		resources {
+			srcDirs "src/main/resources"
+		}
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
