Added context path

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ app.secret=HCX_PAYOR
 #DB configurations
 spring.data.mongodb.uri=mongodb://hcxPayor:hcxPayor%40vitraya@hcxpayor_mongodb.devcluster.com:27017/hcx_payor?authSource=admin
 
+#CONTEXT PATH
+server.servlet.context-path=/api/hcxprovider/v1
 
 #Rabbitmq Configurations
 queue.req.name=hcx_payor_request
