changes in context path

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ app.secret=HCX_PAYOR
 spring.data.mongodb.uri=mongodb://hcxPayor:hcxPayor%40vitraya@hcxpayor_mongodb.devcluster.com:27017/hcx_payor?authSource=admin
 
 #CONTEXT PATH
-server.servlet.context-path=/
+server.servlet.context-path=/vitrayamockpayor
 
 #Rabbitmq Configurations
 queue.req.name=hcx_payor_request
